--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
   },
   "dependencies": {
     "expo-linear-gradient": "~9.2.0",
-    "react-native-reanimated": "2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-redash": "^16.0.11"
   }
 }
