--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   },
   "dependencies": {
     "expo-linear-gradient": "^12.0.1",
-    "react-native-reanimated": "2.12.0",
+    "react-native-reanimated": "^2.14.4",
     "react-native-redash": "^16.3.0"
   }
 }
