--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "lib/**/*"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p   tsconfig.json",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "lint": "eslint --fix src/**/*.{ts,tsx}",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "exit && npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
@@ -74,13 +74,9 @@
     "prettier": "^2.7.1",
     "react": "18.0.0",
     "react-native": "^0.70.5",
-    "react-native-gesture-handler": "^2.5.0",
     "react-test-renderer": "18.0.0",
     "typescript": "4.4.4"
   },
   "dependencies": {
-    "expo-linear-gradient": "^12.0.1",
-    "react-native-redash": "^16.3.0",
-    "react-native-reanimated": "~2.14.4"
   }
 }
